--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/GabCB/movie-web-app#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "express": "^4.18.2"
   }
 }
