--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0"
   },
