--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
