--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
